<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@drawable/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/coffee_menu"
        android:textColor="#8D4B1E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toEndOf="@id/imgLogo"
        app:layout_constraintTop_toTopOf="@id/imgLogo" />

    <FrameLayout
        android:id="@+id/cartContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:src="@drawable/img_shopping_bag" />

        <TextView
            android:id="@+id/tvCartBadge"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="top|end"
            android:background="@drawable/img_badge_green"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_coffee_type"
        android:textColor="#888888"
        app:layout_constraintStart_toStartOf="@id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_round_gray"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/img_search_round"
            app:tint="#888888" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_by_coffee_name"
            android:inputType="text"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoffeeMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/img_home"
                app:tint="#8D4B1E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_home"
                android:textColor="#8D4B1E"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/img_menu_list"
                app:tint="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_menu"
                android:textColor="#888888"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
